15 January 2009: Wouter
	- bug #229: fixup configure checks for compilation with Solaris 
	  Sun cc compiler, ./configure CC=/opt/SUNWspro/bin/cc
	- fixup suncc warnings.
	- fix bug where unbound could crash using libevent 1.3 and older.
	- update testset for recent retry change.

14 January 2009: Wouter
	- 1.2.1 feature: negative caching for failed queries.
	  Queries that failed are cached for 5 seconds (NORR_TTL).
	  If the failure is local, like out of memory, it is not cached.
	- the TTL comparison for the cache used different comparisons,
	  causing many cache responses that used the iterator and validator
	  state machines unnecessarily.
	- retry from 4 to 5 so that EDNS drop retry is part of the first
	  query resolve attempt, and cached error does not stop EDNS fallback.
	- remove debug prints that protect against bad referrals.
	- honor QUIET=no on make commandline (or QUIET=yes ).

13 January 2009: Wouter
	- fixed bug in lameness marking, removed printouts.
	- find NS rrset more cleanly for qtype NS.
	- Moved changes to 1.2.0 for release. Thanks to Mark Zealey for
	  reporting and logs.
	- 1.2.1 feature: stops resolving AAAAs promiscuously when they
	  are in the negative cache.

12 January 2009: Wouter
	- fixed bug in infrastructure lameness cache, did not lowercase
	  name of zone to hash when setting lame.
	- lameness debugging printouts.

9 January 2009: Wouter
	- created svn tag for 1.2.0 release.
	- svn trunk contains 1.2.1 version number.
	- iana portlist updated for todays list.
	- removed debug print.

8 January 2009: Wouter
	- new version of ldns-trunk (today) included as tarball, fixed 
	  bug #224, building with -j race condition.
	- remove possible race condition in the test for race conditions.

7 January 2009: Wouter
	- version 1.2.0 in preparation.
	- feature to allow wildcards (*, ?, [], {}. ~) in trusted-keys-file
	  statements. (Adapted from patch by Paul Wouters).
	- typo fix and iana portlist updated.