@@ -1369,9 +1369,7 @@ processQueryTargets(struct module_qstate* qstate, struct iter_qstate* iq,
 		iq->chase_flags | (iq->chase_to_rd?BIT_RD:0), EDNS_DO|BIT_CD, 
 		&target->addr, target->addrlen, qstate);
 	if(!outq) {
-		verbose(VERB_OPS, "error sending query to auth server; "
-			"skip this address");
-		log_addr(VERB_OPS, "error for address:", 
+		log_addr(VERB_DETAIL, "error sending query to auth server", 
 			&target->addr, target->addrlen);
 		return next_state(iq, QUERYTARGETS_STATE);
 	}
